--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     table {
         margin: auto;
         /*set the table to center/middle*/
-        padding: 25px;
+        /*padding: 15px;*/
         /*width:100%;*/
         /*border-collapse: collapse;*/
         text-align: center;
@@ -556,6 +556,11 @@
 
 <h2>各交易策略收益績效比較</h2>
 
+
+
+
+
+
 <table>
     <tr>
         <th>策略</th>
@@ -570,114 +575,114 @@
     </tr>
     <tr>
         <td rowspan="4">日內波<br>移動平均法</td>
-        <td>比特幣</td>
+        <td>比特幣/美元</td>
         <td>110.84 %</td>
-        <td>40126310277474.74 %</td>
+        <td>40,126,310,277,474.74 %</td>
         <td>2.67 %</td>
-        <td>1.0 %</td>
-        <td>4577142368825796781240629868888064.00 %</td>
+        <td>1.00 %</td>
+        <td>4,577,142,368,825,796,781,240,629,868,888,064.00 %</td>
         <td>1.94 %</td>
         <td>217.07 %</td>
     </tr>
     <tr>
         <td>黃金</td>
-        <td>1.21 %</td>
-        <td>462460.05 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>136911308667370176.00 %</td>
-        <td>1.08 %</td>
-        <td>8.53 %</td>
+        <td>0.96 %</td>
+        <td>197.69 %</td>
+        <td>1.31 %</td>
+        <td>1.00 %</td>
+        <td>2,607,073.04 %</td>
+        <td>1.18 %</td>
+        <td>1.99 %</td>
     </tr>
     <tr>
         <td>聯發科</td>
         <td>1.04 %</td>
-        <td>760738.97 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>6847037172784135.00 %</td>
+        <td>760,738.97 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>6,847,037,172,784,135.00 %</td>
         <td>1.48 %</td>
-        <td>1.0 %</td>
+        <td>1.00 %</td>
     </tr>
     <tr>
         <td>台積電</td>
         <td>1.31 %</td>
-        <td>28836.51 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>124888609179.68 %</td>
+        <td>28,836.51 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>124,888,609,179.68 %</td>
         <td>1.40 %</td>
         <td>2.88 %</td>
     </tr>
     <tr>
         <td rowspan="4"> 波段<br>移動平均法</td>
-        <td>比特幣</td>
+        <td>比特幣/美元</td>
         <td>4.17 %</td>
-        <td>1790775665.95 %</td>
+        <td>1,790,775,665.95 %</td>
         <td>2.64 %</td>
-        <td>1.0 %</td>
-        <td>68135184439713.12 %</td>
+        <td>1.00 %</td>
+        <td>68,135,184,439,713.12 %</td>
         <td>2.01 %</td>
-        <td>621086429.60 %</td>
+        <td>621,086,429.60 %</td>
     </tr>
     <tr>
         <td>黃金</td>
-        <td>1.0 %</td>
-        <td>27729.18 %</td>
-        <td>1.05 %</td>
-        <td>1.0 %</td>
-        <td>92208956.19 %</td>
-        <td>1.04 %</td>
-        <td>0.12 %</td>
+        <td>1.00 %</td>
+        <td>48.49 %</td>
+        <td>1.33 %</td>
+        <td>1.00 %</td>
+        <td>1,059.61 %</td>
+        <td>1.18 %</td>
+        <td>1.39 %</td>
     </tr>
     <tr>
         <td>聯發科</td>
-        <td>1.0 %</td>
-        <td>12857.27 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>20482415.56 %</td>
+        <td>1.00 %</td>
+        <td>12,857.27 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>20,482,415.56 %</td>
         <td>1.61 %</td>
         <td>510.82 %</td>
     </tr>
     <tr>
         <td>台積電</td>
-        <td>1.0 %</td>
-        <td>1054.54 %</td>
+        <td>1.00 %</td>
+        <td>1,054.54 %</td>
         <td>1.86 %</td>
-        <td>1.0 %</td>
-        <td>109361.95 %</td>
+        <td>1.00 %</td>
+        <td>109,361.95 %</td>
         <td>1.51 %</td>
         <td>100.71 %</td>
     </tr>
     <tr>
         <td rowspan="4"> 日內波<br>葛蘭碧8大法則</td>
-        <td>比特幣</td>
+        <td>比特幣/美元</td>
         <td>100.28 %</td>
-        <td>10815.66 %</td>
+        <td>10,815.66 %</td>
         <td>2.68 %</td>
-        <td>1.0 %</td>
-        <td>1510409750252233740299545459294208.00 %</td>
+        <td>1.00 %</td>
+        <td>1,510,409,750,252,233,740,299,545,459,294,208.00 %</td>
         <td>1.82 %</td>
-        <td>126.5 %</td>
+        <td>126.50 %</td>
     </tr>
     <tr>
         <td>黃金</td>
-        <td>0.84 %</td>
-        <td>79.19 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>11146854422637048.00 %</td>
-        <td>1.11 %</td>
-        <td>0.45 %</td>
+        <td>1.96 %</td>
+        <td>7.32 %</td>
+        <td>1.31 %</td>
+        <td>1.00 %</td>
+        <td>1,530,006.25 %</td>
+        <td>1.19 %</td>
+        <td>0.89 %</td>
     </tr>
     <tr>
         <td>聯發科</td>
         <td>5.22 %</td>
         <td>30.37 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>1123565053418907.50 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>1,123,565,053,418,907.50 %</td>
         <td>1.59 %</td>
         <td>4.13 %</td>
     </tr>
@@ -685,52 +690,52 @@
         <td>台積電</td>
         <td>5.13 %</td>
         <td>29.87 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>39513115992.20 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>39,513,115,992.20 %</td>
         <td>1.47 %</td>
         <td>2.96 %</td>
     </tr>
     <tr>
         <td rowspan="4">波段<br>葛蘭碧8大法則 </td>
-        <td>比特幣</td>
+        <td>比特幣/美元</td>
         <td>3.14 %</td>
         <td>1.64 %</td>
         <td>2.64 %</td>
-        <td>1.0 %</td>
-        <td>39231531667694.25 %</td>
+        <td>1.00 %</td>
+        <td>39,231,531,667,694.25 %</td>
         <td>5.08 %</td>
-        <td>22865361.69 %</td>
+        <td>22,865,361.69 %</td>
     </tr>
     <tr>
         <td>黃金</td>
-        <td>1.0 %</td>
-        <td>0.93 %</td>
-        <td>1.05 %</td>
-        <td>1.0 %</td>
-        <td>34279149.65 %</td>
-        <td>2.27 %</td>
-        <td>0.0 %</td>
+        <td>1.00 %</td>
+        <td>1.14 %</td>
+        <td>1.33 %</td>
+        <td>1.00 %</td>
+        <td>803.09 %</td>
+        <td>1.57 %</td>
+        <td>0.50 %</td>
     </tr>
     <tr>
         <td>聯發科</td>
-        <td>1.0 %</td>
+        <td>1.00 %</td>
         <td>0.90 %</td>
-        <td>1.0 %</td>
-        <td>1.0 %</td>
-        <td>7562730.93 %</td>
+        <td>1.00 %</td>
+        <td>1.00 %</td>
+        <td>7,562,730.93 %</td>
         <td>2.69 %</td>
         <td>95.58 %</td>
     </tr>
     <tr>
         <td>台積電</td>
-        <td>1.0 %</td>
+        <td>1.00 %</td>
         <td>0.96 %</td>
         <td>1.86 %</td>
-        <td>1.0 %</td>
-        <td>70477.70 %</td>
+        <td>1.00 %</td>
+        <td>70,477.70 %</td>
         <td>3.04 %</td>
-        <td>10356.76 %</td>
+        <td>10,356.76 %</td>
     </tr>
     <tr>
         <th>策略</th>
@@ -745,49 +750,49 @@
     </tr>
     <tr>
         <td rowspan="4">日內波<br>無任何交易策略 </td>
-        <td>比特幣</td>
-        <td>null </td>
+        <td>比特幣/美元</td>
+        <td>null</td>
         <td>1.83 %</td>
         <td>2.23 %</td>
         <td>2.37 %</td>
-        <td>68318029697406918358896476160.00 %</td>
+        <td>68,318,029,697,406,918,358,896,476,160.00 %</td>
         <td>1.78 %</td>
         <td>2.73 %</td>
     </tr>
     <tr>
         <td>黃金</td>
-        <td>null </td>
-        <td>1.08 %</td>
-        <td>1.39 %</td>
-        <td>0.95 %</td>
-        <td>273322957185962.31 %</td>
-        <td>1.07 %</td>
-        <td>1.57 %</td>
+        <td>null</td>
+        <td>1.32 %</td>
+        <td>1.31 %</td>
+        <td>1.31 %</td>
+        <td>279,018.80 %</td>
+        <td>1.16 %</td>
+        <td>1.31 %</td>
     </tr>
     <tr>
         <td>聯發科</td>
-        <td>null </td>
+        <td>null</td>
         <td>0.77 %</td>
         <td>2.34 %</td>
-        <td>1.0 %</td>
-        <td>5104306725747.11 %</td>
+        <td>1.00 %</td>
+        <td>5,104,306,725,747.11 %</td>
         <td>1.43 %</td>
         <td>0.39 %</td>
     </tr>
     <tr>
         <td>台積電</td>
-        <td>null </td>
+        <td>null</td>
         <td>1.21 %</td>
         <td>0.97 %</td>
-        <td>1.0 %</td>
-        <td>407544271.61 %</td>
+        <td>1.00 %</td>
+        <td>407,544,271.61 %</td>
         <td>1.27 %</td>
         <td>0.45 %</td>
     </tr>
     <tr>
         <td rowspan="4">波段<br>無任何交易策略 </td>
-        <td>比特幣</td>
-        <td>null </td>
+        <td>比特幣/美元</td>
+        <td>null</td>
         <td>1.78 %</td>
         <td>0.87 %</td>
         <td>0.98 %</td>
@@ -797,17 +802,17 @@
     </tr>
     <tr>
         <td>黃金</td>
-        <td>null </td>
-        <td>0.92 %</td>
-        <td>0.97 %</td>
+        <td>null</td>
+        <td>1.30 %</td>
         <td>0.94 %</td>
-        <td>15.02 %</td>
+        <td>1.07 %</td>
+        <td>3.12 %</td>
         <td>1.00 %</td>
-        <td>0.64 %</td>
+        <td>0.92 %</td>
     </tr>
     <tr>
         <td>聯發科</td>
-        <td>null </td>
+        <td>null</td>
         <td>0.98 %</td>
         <td>0.99 %</td>
         <td>1.00 %</td>
@@ -817,7 +822,7 @@
     </tr>
     <tr>
         <td>台積電</td>
-        <td>null </td>
+        <td>null</td>
         <td>1.05 %</td>
         <td>1.00 %</td>
         <td>1.00 %</td>
