--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
 <h2>程式原始碼</h2>
 <br>
 <br>
-<a href="https://github.com/alfo0924/pythonProjectMMLTrades">人民的通膨救星-私人智能基金 原始碼</a>
+<a href="https://github.com/alfo0924/pythonProjectMMLTrades">2024GenAiStars 人民的通膨救星-私人智能基金 程式原始碼</a>
 <br>
 <br>
 <a href="https://github.com/alfo0924/pythonProjectMMLTradesDescription">2024GenAiStars 作品說明頁面原始碼</a>
